--- a/assets/style.css
+++ b/assets/style.css
@@ -68,6 +68,7 @@ body {
 }
 
 .picture img {
+	height: 100%;
 	width: 100%;
 }
 #about-me {
@@ -352,5 +353,6 @@ input[type='submit'] {
 	}
 	.picture {
 		width: 80%;
+		height: 80%;
 	}
 }
