--- a/assets/style.css
+++ b/assets/style.css
@@ -69,8 +69,10 @@ body {
 }
 
 .picture img {
-	height: 100%;
-	width: 100%;
+	/* height: 100%;
+	width: 100%; */
+	max-width: 500px;
+	max-height: 500px;
 }
 #about-me {
 	flex: 2;
