--- a/assets/style.css
+++ b/assets/style.css
@@ -69,10 +69,8 @@ body {
 }
 
 .picture img {
-	/* height: 100%;
-	width: 100%; */
-	max-width: 500px;
-	max-height: 500px;
+	height: 100%;
+	width: 100%;
 }
 #about-me {
 	flex: 2;
